Deactivate Integration Send Integration Data

--- a/view/adminhtml/templates/view.phtml
+++ b/view/adminhtml/templates/view.phtml
@@ -2,6 +2,7 @@
 <div class="header-view-block">
     <img src="/pub/media/salesandorders/image/logo.png">
     <button id="popup-modal">Install</button>
+    <button id="deactivate_integration">Deactivate</button>
 </div>
 <div class="content-view-block">
     <div class="content-view-block-left">
