Oath final code v 0.1

--- a/view/adminhtml/templates/view.phtml
+++ b/view/adminhtml/templates/view.phtml
@@ -2,7 +2,9 @@
 <div class="header-view-block">
     <img src="/pub/media/salesandorders/image/logo.png">
     <button id="popup-modal">Install</button>
+    <button id="add_integration">Add</button>
     <button id="deactivate_integration">Deactivate</button>
+    <button id="delete_integration">Delete</button>
 </div>
 <div class="content-view-block">
     <div class="content-view-block-left">
