--- a/view/adminhtml/templates/view.phtml
+++ b/view/adminhtml/templates/view.phtml
@@ -1,35 +1,50 @@
-<iframe id="theFrame" src="http://www.salesandorders.com" style="width:100%;" frameborder="0"></iframe>
-<div class="header-view-block">
-    <img src="/pub/media/salesandorders/image/logo.png">
-    <button id="popup-modal">Install</button>
-    <button id="add_integration">Add</button>
-    <button id="deactivate_integration">Deactivate</button>
-    <button id="delete_integration">Delete</button>
-</div>
-<div class="content-view-block">
-    <div class="content-view-block-left">
-        <h2>Dev - Sales and Orders</h2>
-        <h3>App Dev - Sales and Orders requires:</h3>
-        <ul>
-            <li>
-                <p>View and modify basic store information</p>
-            </li>
-            <li>
-                <p>View general store information</p>
-            </li>
-            <li>
-                <p>View marketing information</p>
-            </li>
-            <li>
-                <p>View products</p>
-            </li>
-        </ul>
+<?php
+/**
+ * @var \SalesAndOrders\FeedTool\Block\Adminhtml\Page\View $block
+ */
+
+$viewData = $block->getIframeLinkData();
+?>
+
+<?php if ($viewData['content']) { ?>
+    <div class="header-view-block">
+        <button id="deactivate_integration">Deactivate</button>
+        <button id="delete_integration">Delete</button>
     </div>
-    <div class="content-view-block-center">
-        <ul>
-            <li>
-                <p>Access to your password</p>
-            </li>
-        </ul>
+    <iframe id="iFrame" src="<?php echo $viewData['url']; ?>" style="width:100%; height: 800px" frameborder="0"></iframe>
+<? } else { ?>
+    <div class="header-view-block">
+        <img src="/pub/media/salesandorders/image/logo.png">
+        <button id="popup-modal">Install</button>
+        <button id="add_integration">Add</button>
+        <button id="deactivate_integration">Deactivate</button>
+        <button id="delete_integration">Delete</button>
     </div>
-</div>
+    <div class="content-view-block">
+        <div class="content-view-block-left">
+            <h2>Dev - Sales and Orders</h2>
+            <h3>App Dev - Sales and Orders requires:</h3>
+            <ul>
+                <li>
+                    <p>View and modify basic store information</p>
+                </li>
+                <li>
+                    <p>View general store information</p>
+                </li>
+                <li>
+                    <p>View marketing information</p>
+                </li>
+                <li>
+                    <p>View products</p>
+                </li>
+            </ul>
+        </div>
+        <div class="content-view-block-center">
+            <ul>
+                <li>
+                    <p>Access to your password</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+<?php } ?>
