--- a/view/adminhtml/templates/view.phtml
+++ b/view/adminhtml/templates/view.phtml
@@ -26,23 +26,24 @@ $viewData = $block->getIframeLinkData();
             <h3>App Dev - Sales and Orders requires:</h3>
             <ul>
                 <li>
-                    <p>View and modify basic store information</p>
+                    <p>View basic store information</p>
                 </li>
                 <li>
                     <p>View general store information</p>
                 </li>
                 <li>
-                    <p>View marketing information</p>
+                    <p>View and modify products</p>
                 </li>
-                <li>
-                    <p>View products</p>
-                </li>
+
             </ul>
         </div>
         <div class="content-view-block-center">
             <ul>
                 <li>
-                    <p>Access to your password</p>
+                    <p>View Customers information</p>
+                </li>
+                <li>
+                    <p>View and create orders</p>
                 </li>
             </ul>
         </div>
