--- a/view/adminhtml/templates/view.phtml
+++ b/view/adminhtml/templates/view.phtml
@@ -8,17 +8,18 @@ $viewData = $block->getIframeLinkData();
 
 <?php if ($viewData['content']) { ?>
     <div class="header-view-block">
-        <button id="deactivate_integration">Deactivate</button>
-        <button id="delete_integration">Delete</button>
+        <!--<button id="deactivate_integration">Deactivate</button>
+        <button id="delete_integration">Delete</button>-->
     </div>
     <iframe id="iFrame" src="<?php echo $viewData['url']; ?>" style="width:100%; height: 800px" frameborder="0"></iframe>
 <? } else { ?>
     <div class="header-view-block">
         <img src="/pub/media/salesandorders/image/logo.png">
-        <button id="popup-modal">Install</button>
-        <button id="add_integration">Add</button>
-        <button id="deactivate_integration">Deactivate</button>
-        <button id="delete_integration">Delete</button>
+        <button class="activate" id="popup-modal">Install</button>
+        <img class="loader" src="/pub/media/salesandorders/image/load.gif">
+<!--        <button id="add_integration">Add</button>-->
+<!--        <button id="deactivate_integration">Deactivate</button>-->
+<!--        <button id="delete_integration">Delete</button>-->
     </div>
     <div class="content-view-block">
         <div class="content-view-block-left">
