--- a/view/adminhtml/templates/view.phtml
+++ b/view/adminhtml/templates/view.phtml
@@ -6,6 +6,14 @@
 $viewData = $block->getIframeLinkData();
 ?>
 
+<script type="text/javascript">
+    require([
+        'mage/url'
+    ], function(url) {
+        return url.setBaseUrl('<?php /* @escapeNotVerified */ echo $block->getAdminBaseUrl();?>');
+    });
+</script>
+
 <?php if ($viewData['content']) { ?>
     <div class="header-view-block">
         <!--<button id="deactivate_integration">Deactivate</button>
@@ -14,9 +22,9 @@ $viewData = $block->getIframeLinkData();
     <iframe id="iFrame" src="<?php echo $viewData['url']; ?>" style="width:100%; height: 800px" frameborder="0"></iframe>
 <? } else { ?>
     <div class="header-view-block">
-        <img src="/pub/media/salesandorders/image/logo.png">
+        <img src="<?php echo $block->getViewFileUrl('SalesAndOrders_FeedTool::images/logo.png'); ?>">
         <button class="activate" id="popup-modal">Install</button>
-        <img class="loader" src="/pub/media/salesandorders/image/load.gif">
+        <img class="loader" src="<?php echo $block->getViewFileUrl('SalesAndOrders_FeedTool::images/load.gif'); ?>">
 <!--        <button id="add_integration">Add</button>-->
 <!--        <button id="deactivate_integration">Deactivate</button>-->
 <!--        <button id="delete_integration">Delete</button>-->
