--- a/view/adminhtml/templates/view.phtml
+++ b/view/adminhtml/templates/view.phtml
@@ -31,8 +31,7 @@ $viewData = $block->getIframeLinkData();
     </div>
     <div class="content-view-block">
         <div class="content-view-block-left">
-            <h2>Dev - Sales and Orders</h2>
-            <h3>App Dev - Sales and Orders requires:</h3>
+            <h3>Sales and Orders requires:</h3>
             <ul>
                 <li>
                     <p>View basic store information</p>
@@ -43,17 +42,17 @@ $viewData = $block->getIframeLinkData();
                 <li>
                     <p>View and modify products</p>
                 </li>
-
-            </ul>
-        </div>
-        <div class="content-view-block-center">
-            <ul>
                 <li>
                     <p>View Customers information</p>
                 </li>
                 <li>
                     <p>View and create orders</p>
                 </li>
+            </ul>
+        </div>
+        <div class="content-view-block-center">
+            <ul>
+
             </ul>
         </div>
     </div>
