--- a/view/adminhtml/templates/view.phtml
+++ b/view/adminhtml/templates/view.phtml
@@ -10,21 +10,25 @@ $viewData = $block->getIframeLinkData();
     require([
         'mage/url'
     ], function(url) {
-        return url.setBaseUrl('<?php /* @escapeNotVerified */ echo $block->getAdminBaseUrl();?>');
+        return url.setBaseUrl('<?=$block->escapeUrl($block->getAdminBaseUrl());?>');
     });
 </script>
 
-<?php if ($viewData['content']) { ?>
+<?php if ($viewData['content']) : ?>
     <div class="header-view-block">
         <!--<button id="deactivate_integration">Deactivate</button>
         <button id="delete_integration">Delete</button>-->
     </div>
-    <iframe id="iFrame" src="<?php echo $viewData['url']; ?>" style="width:100%; height: 800px" frameborder="0"></iframe>
-<? } else { ?>
+    <iframe 
+        id="iFrame" src="<?=$block->escapeUrl($viewData['url']);?>" style="width:100%; height:800px" frameborder="0">
+    </iframe>
+<?php else : ?>
     <div class="header-view-block">
-        <img src="<?php echo $block->getViewFileUrl('SalesAndOrders_FeedTool::images/logo.png'); ?>">
+        <img src="<?=$block->escapeUrl($block->getViewFileUrl('SalesAndOrders_FeedTool::images/logo.png'));?>">
         <button class="activate" id="popup-modal">Install</button>
-        <img class="loader" src="<?php echo $block->getViewFileUrl('SalesAndOrders_FeedTool::images/load.gif'); ?>">
+        <img 
+        class="loader" 
+        src="<?=$block->escapeUrl($block->getViewFileUrl('SalesAndOrders_FeedTool::images/load.gif')); ?>">
 <!--        <button id="add_integration">Add</button>-->
 <!--        <button id="deactivate_integration">Deactivate</button>-->
 <!--        <button id="delete_integration">Delete</button>-->
@@ -56,4 +60,4 @@ $viewData = $block->getIframeLinkData();
             </ul>
         </div>
     </div>
-<?php } ?>
+<?php endif ?>
